# ChangeLog for wiki


========================== PHPWEBSITE 1.X.X RELEASES ==========================

    BUG #7: Removed references to broken help module.
    BUG #6: Fix Skandinavian letters support. (see http://bit.ly/2OyZYe)

*wiki-1.1.2 (26 Apr 2009)

    BUG #1: Fix anchor links.  (Thanks Matt!)
    BUG #2: Table of Contents anchor fix.  (Thanks Matt!)
    RFE #5: Replace references to SourceForge with GitHub.

*wiki-1.1.1 (29 Mar 2008)

    Support new mod_rewrite method introduced in phpWebSite 1.5.0.

*wiki-1.1.0 (03 Jan 2008)

    Updated to new translation functions. (Now requires phpWebSite 1.2.0.)
    Cleaned up look of about file.
    Requesting a restricted page forwards user to the login screen.
    Fixed image on SamplePage and SandBox pages.
    Changed to use logIfError function in the core.

*wiki-1.0.0 (03 Dec 2006)

    Added mod_rewrite support.
    Three more menu links can now be hidden via options.
    RFE #1453452: Now supports one column comparison of page revisions.
    Can now remove old page revisions from page history.
    Converted to phpWebSite 1.x.x module. No longer supports phpWebSite 0.10.x

========================== PHPWEBSITE 0.10.X RELEASES =========================

*wiki-0.6.1 (15 Oct 2006)

    BUG #1551721: Fixed PHP Notice with search.

*wiki-0.6.0 (14 Jun 2006)

    RFE #1243732: Added template feature.  Usage: {{Template:WikiPage}}
    RFE #1438866: Added support for additional parsers.  See conf/config.php
    Several design changes made to improve module memory usage.

*wiki-0.5.0 (22 Nov 2005)

    RFE #1361874: Added menu_item.tpl to remove hardcoded vertical bar in menus.
    RFE #1285544: Added discussion feature (Comments module required)
    RFE #1153528: Option to format wiki page names before displaying.
    RFE #1361074: Do not force page menu to be at top of page. (Template change)
    RFE #1361876: Ability to switch off certain menu items.
    Tweaked the diff template to fix an alignment issue.
